--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE HTML>
 <html>
+//Alliyah Taylor's Compiler
+//Based on "Rebecca's Bitchen Compiler Template"
+//CMPT 43? - Spring 2019
 <head>
-    <title>Rebecca's Bitchen Compiler Template</title>
+    <title>The edgy Space Station Compiler</title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="dist/styles/compiler.css" />
     <link rel="stylesheet" href="dist/styles/bootstrap.min.css">
