Most of the logic in place, have to go back and handle error handling
A lot of last night ended up as rewriting the same functions 4 billion times and I fell asleep working on this. Will finish the rest today. (Obviously, it's the last day.)
_______________________________________
END OF TEASER
ACT ONE
FADE IN:
INT. OPS

Kira and Dax are on duty, leaning over the same console and discussing something quietly. SISKO approaches them from his office, followed shortly by ODO, who stands behind SISKO with his arms crossed.

SISKO
Major. Lieutenant. Please tell me one of you has something.

KIRA
(deep sigh) Afraid not, Commander. Take a look.

SISKO joins them around the console, leaning in to look at a display of the temporal fluctuations. He squints at them for a second and frowns before looking up at the two women.

SISKO
This looks exactly like it did last time I checked the reports.

DAX
Not exactly.

DAX leans in and presses a few buttons on the screen, zooming in on part of the anomaly. It looks like an effect from Windows Media Player in the early 2000s.

DAX (Continued)
It’s gotten worse. From what we can tell, the temporal fluctuations are becoming more frequent and starting to impact a wider area. At its current rate of growth, we’ll start to see the effects of it in a few days, at best.

SISKO
At best?

KIRA
At worst, it’s already started, but not on a broad enough scale for us to pick up the impacts yet.

SISKO looks between the two women for a long moment and sighs.

SISKO
Thank you Major, Lieutenant.
(He turns)
Odo, I need you to keep a close eye on our Gamma Quadrant friends. I have a bad feeling that they’ll be around for longer than any of us want them to be.

--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
 
     <!-- Client-side code down here, per the YSlow advice. 
          (http://developer.yahoo.com/performance/rules.html#js_bottom) -->
-    <script type="text/javascript" src="dist/scripts/utils.js"></script>	
-    <script type="text/javascript" src="dist/scripts/lexer.js"></script>	
-    <script type="text/javascript" src="dist/scripts/globals.js"></script>	
+    <script type="text/javascript" src="dist/scripts/utils.js"></script>
+    <script type="text/javascript" src="dist/scripts/tree.js"></script>
+    <script type="text/javascript" src="dist/scripts/lexer.js"></script>
+    <script type="text/javascript" src="dist/scripts/parser.js"></script>
+    <script type="text/javascript" src="dist/scripts/globals.js"></script>
     <script type="text/javascript">
 
         //Track if verbose mode is on
@@ -96,8 +98,10 @@
                      lastError = true;
                  } else if(LexResults.tokens.length == 0) {
                      endFile = true;
+                     parse(LexResults.tokens, currentProg);
                  }else{
                      lex(LexResults, currentProg);
+                     parse(LexResults.tokens, currentProg);
                      lastError = false;
                      currentProg++;
                  }
@@ -122,35 +126,21 @@
     
 	 	 // TODO: These parse routines really should be in TypeScript.
 		 //       This exercise is left to the read. Consider it project 0.5 .
-	    function parse() {
-	        putMessage("Parsing [" + tokens + "]");
-	        // Grab the next token.
-	        currentToken = getNextToken();
-	        // A valid parse derives the G(oal) production, so begin there.
-	        parseG();
-	        // Report the results.
-	        putMessage("Parsing found " + errorCount + " error(s).");        
-	    }
-    
-	    function parseG() {
-	        // A G(oal) production can only be an E(xpression), so parse the E production.
-	        parseE();
-	    }
+	    function parse(tokens, progNumber) {
+            let parser = new _Parser(tokens, progNumber);
+            var parsed = parser.parse();
 
-	    function parseE() {
-	        // All E productions begin with a digit, so make sure that we have one.
-	        checkToken("digit");
-	        // Look ahead 1 char (which is now in currentToken because checkToken 
-	        // consumes another one) and see which E production to follow.
-	        if (currentToken != EOF) {
-	            // We're not done, we expect to have an op.
-	            checkToken("op");
-	            parseE();
-	        } else {
-	            // There is nothing else in the token stream, 
-	            // and that's cool since E --> digit is valid.
-	            putMessage("EOF reached");
-	        }
+            if (verbose){
+	            for (var i = 0; i < parsed.log.length; i++){
+	                putMessage("DEBUG PARSER - " + parsed.log[i]);
+                }
+            }
+            if(parsed.error){
+                putMessage("ERROR - PARSE FAILED.")
+            }else{
+                putMessage(parsed.cst.toCSTString());
+                console.log("this is another test" + parsed.cst.toCSTString());
+            }
 	    }
 
 	    function lex(LexResults, progNumber){
