--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <input type="button" id="btnCompile" value="Compile" onclick="btnCompile_click();"/>
     </div>
     <div style="text-align:center;">
-        <input type="button" id="btnVerbose" value="Londo Mode" onclick="btnVerbose_click();"/>
+        <input type="button" id="btnVerbose" value="Current: Londo Mode" onclick="btnVerbose_click();"/>
     </div>
 
     <div>
@@ -44,7 +44,7 @@
     <script type="text/javascript">
 
         //Track if verbose mode is on
-        let verbose = false;
+        let verbose = true;
         //Track if we're done with Lexical Analysis
         let endFile = false;
         //Keep track of program numbers
@@ -70,12 +70,12 @@
 
             //This just means Verbose for now but I hope to change that.
             //I'm also gonna add some trek stuff later
-		     if(button.value == "Londo Mode"){
-		         verbose = true;
-                button.value = "Ivanova Mode";
-             }else{
-		         button.value = "Londo Mode";
+		     if(button.value == "Current: Londo Mode"){
 		         verbose = false;
+                button.value = "Current: Ivanova Mode";
+             }else{
+		         button.value = "Current: Londo Mode";
+		         verbose = true;
              }
         }
 	    function btnCompile_click() {        
@@ -96,6 +96,7 @@
                      lex(LexResults, currentProg);
                      currentProg++;
                      lastError = true;
+                     putMessage("PARSING SKIPPED DUE TO LEX ERROR.");
                  } else if(LexResults.tokens.length == 0) {
                      endFile = true;
                      parse(LexResults.tokens, currentProg);
@@ -136,7 +137,7 @@
                 }
             }
             if(parsed.error){
-                putMessage("ERROR - PARSE FAILED.")
+                putMessage("ERROR - PARSE FAILED IN PROGRAM." + progNumber);
             }else{
                 putMessage(parsed.cst.toCSTString());
                 console.log("this is another test" + parsed.cst.toCSTString());
@@ -144,6 +145,7 @@
 	    }
 
 	    function lex(LexResults, progNumber){
+            putMessage("\n" + "Starting Compilation of Program number " + currentProg + "\n");
 
 		     //Print out everything if we're being verbose
 		     if(verbose){
@@ -166,60 +168,13 @@
             for(var i = 0; i < LexResults.errors.length; i++){
                 putMessage("ERROR: " + LexResults.errors[i].name + " at (" + LexResults.errors[i].lineNumber + ":" + LexResults.errors[i].position + ")");
             }
-            putMessage("Lexical Analysis Complete. " + LexResults.warnings.length + " Warning(s) and " + LexResults.errors.length + " Error(s)");
+            putMessage("Lexical Analysis Complete for program "+ progNumber +". " + LexResults.warnings.length + " Warning(s) and " + LexResults.errors.length + " Error(s)");
 
             console.log(LexResults);
             remainder = LexResults.remainder;
 
 	    }
 
-	    function checkToken(expectedKind) {
-	        // Validate that we have the expected token kind and et the next token.
-	        switch(expectedKind) {
-	            case "digit":   putMessage("Expecting a digit");
-	                            if (currentToken=="0" || currentToken=="1" || currentToken=="2" || 
-	                                currentToken=="3" || currentToken=="4" || currentToken=="5" || 
-	                                currentToken=="6" || currentToken=="7" || currentToken=="8" || 
-	                                currentToken=="9")
-	                            {
-	                                putMessage("Got a digit!");
-	                            }
-	                            else
-	                            {
-	                                errorCount++;
-	                                putMessage("NOT a digit.  Error at position " + tokenIndex + ".");
-	                            }
-	                            break;
-	            case "op":      putMessage("Expecting an operator");
-	                            if (currentToken=="+" || currentToken=="-")
-	                            {
-	                                putMessage("Got an operator!");
-	                            }
-	                            else
-	                            {
-	                                errorCount++;
-	                                putMessage("NOT an operator.  Error at position " + tokenIndex + ".");
-	                            }
-	                            break;
-	            default:        putMessage("Parse Error: Invalid Token Type at position " + tokenIndex + ".");
-	                            break;			
-	        }
-	        // Consume another token, having just checked this one, because that 
-	        // will allow the code to see what's coming next... a sort of "look-ahead".
-	        currentToken = getNextToken();
-	    }
-
-	    function getNextToken() {
-	        var thisToken = EOF;    // Let's assume that we're at the EOF.
-	        if (tokenIndex < tokens.length)
-	        {
-	            // If we're not at EOF, then return the next token in the stream and advance the index.
-	            thisToken = tokens[tokenIndex];
-	            putMessage("Current token:" + thisToken);
-	            tokenIndex++;
-	        }
-	        return thisToken;
-	    }
     </script>
 </body>
 </html>
