Why did no one tell me I spelled Analyzer wrong?
Anyway, I'm hunting down parser bugs still.  It's a fun time.
___________________________________________

INT. BRIG

MICHAELS screams incoherently about how everything is fake as he and Garibaldi are placed in two separate cells in the brig.

ODO
So let me get this straight. You're not from the Gamma quadrant, but you are from a space station that we have no knowledge or record of?

GARIBALDI
I'm telling you I don't know. I'm not one of those stellar geography people, but we probably don't use the same quadrant system. I am Chief Security Officer on Babylon 5. It orbits the planet Epsilon Eridani.

ODO
(Skeptical) Epsilon Eridani, huh?

Computer, search Starfleet records for any mention of a planet named Espilon Eridani.

COMPUTER
Epsilon Eridani is a star in the Beta Quadrant located approximately ten light years from Sol, also known as the Axanar star system. It is the destination for two major commercial routes, Alpha Centauri-Epsilon Eridani and Sol-Epsilon Eridani. The--

ODO
(impatiently) Yes thank you, Computer. Is there any record of a space station known as Babylon 5 in that star system?

The computer beeps twice.

COMPUTER
Negative, we have no record of a Babylon 5.

GARIBALDI
Maybe your computer thing is broken, Constable. Should have someone check it out. Look, I'm sure if you contact Earthforce--

ODO
(Interrupting) Earth?

GARIBALDI
Yeah, Earth. Why, you heard of it?

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <script type="text/javascript" src="dist/scripts/tree.js"></script>
     <script type="text/javascript" src="dist/scripts/lexer.js"></script>
     <script type="text/javascript" src="dist/scripts/parser.js"></script>
+    <script type="text/javascript" src="dist/scripts/semanticAnalzyer.js"></script>
     <script type="text/javascript" src="dist/scripts/globals.js"></script>
     <script type="text/javascript">
 
@@ -145,9 +146,11 @@
                      lastError = true;
                      putMessage("PARSING SKIPPED DUE TO LEX ERROR.");
                  } else if(LexResults.tokens.length == 0) {
+                     console.log("ARE WE DOING THIS");
                      endFile = true;
-                     parse(LexResults.tokens, currentProg);
+                    // parse(LexResults.tokens, currentProg);
                  }else{
+                     console.log("AND THIS?");
                      lex(LexResults, currentProg);
                      parse(LexResults.tokens, currentProg);
                      lastError = false;
@@ -175,6 +178,7 @@
 	 	 // TODO: These parse routines really should be in TypeScript.
 		 //       This exercise is left to the read. Consider it project 0.5 .
 	    function parse(tokens, progNumber) {
+            console.log("HOW MANY TIMES ARE WE GETTING HERE");
             let parser = new _Parser(tokens, progNumber);
             var parsed = parser.parse();
 
@@ -189,6 +193,7 @@
                 putMessage(parsed.cst.toCSTString());
                 console.log("this is another test" + parsed.cst.toCSTString());
             }
+            console.log("why am I broken?");
 	    }
 
 	    function lex(LexResults, progNumber){
