Can now create AST
In the place of the script this time, I present to you the commits that could have been. Just so you're not missing out on all the times I thought about committing and decided I could deal with just one more bug:

Trying to do AST stuff idk, I'm tired (Made if/then statements and started adding recursion into it, fingers crossed)

why doesn't any of this work? (I'm not really sure what progress I've made, but I sure wrote something here)

it doesn't work because i was using = instead of ==..... I am a senior CS major with a job (Things are happening now, like crying. Crying is happening)

what even is a string (I don't want to navigate this charlist but I know you're going to make me. I should have used tokens instead of the CST, why did I not use tokens?)

stringbuilder is a thing but it's late and I don't wanna figure out how to use it (I messed up yet another potential way to make this string expression happen and I am losing hope)

...... A TREE IT'S A TREE I CAN MAKE A STRING FROM THE TREE (I GOT IT, clearly I should have done this before sleep deprivation set in but I figured out the most obvious solution)

WHY is the indentation off on my AST??? (Self explanatory. I printed the thing. It didn't work)

UPDATE: The indentation is off because I'm dumb and ascending the tree early (I think that I have defeated one small part of this project. Now I shall briefly rest)

I know it doesn't make up for many commits, but I figured it was only fair to share my anguish

--- a/index.html
+++ b/index.html
@@ -193,7 +193,9 @@
                 putMessage(parsed.cst.toCSTString());
                 console.log("this is another test" + parsed.cst.toCSTString());
             }
-            console.log("why am I broken?");
+            let analyzer = new _Analyzer();
+            let ast = analyzer.analyze(parsed.cst);
+            putMessage(ast.toCSTString());
 	    }
 
 	    function lex(LexResults, progNumber){
