--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <textarea id="taOutput"></textarea>
         </div>        
     </div>
+    <div id = "symbtable" style = "color:white">
+
+    </div>
 
   <!--  <div>
         <img style="display:block; margin-left:auto; margin-right:auto;"
@@ -192,10 +195,19 @@
             }else{
                 putMessage(parsed.cst.toCSTString());
                // console.log("this is another test" + parsed.cst.toCSTString());
+                let analyzer = new _Analyzer();
+                let results = analyzer.analyze(parsed.cst);
+                let ast = results.ast;
+                if(verbose){
+                    for ( let j = 0; j < results.log.length; j++){
+                        putMessage(results.log[j]);
+                    }
+                    putMessage("Semantic Analysis Completed with "+ results.errors+ " errors and " + results.warnings + " warnings.");
+                }
+                putMessage(ast.toCSTString());
+                symTable(results.symbols);
             }
-            let analyzer = new _Analyzer();
-            let ast = analyzer.analyze(parsed.cst);
-            putMessage(ast.toCSTString());
+
 	    }
 
 	    function lex(LexResults, progNumber){
@@ -228,6 +240,20 @@
             remainder = LexResults.remainder;
 
 	    }
+
+	    function symTable(array){
+	        let result = "<table border = 2> <tr> <th>ID</th><th>Type</th><th>Program</th><th>Position</th><th>Scope</th><th>Initialized</th><th>Used</th></tr>";
+	        for (let i = 0; i<array.length; i++){
+	            result += "<tr>";
+	           result += "<td>"+array[i].id+"</td><td>"+array[i].type+"</td><td>"+array[i].program+"</td><td>"+array[i].position+"</td><td>"+array[i].scopes+"</td><td>"+array[i].init+"</td><td>"+array[i].used+"</td>";
+	           result +="</tr>";
+            }
+            result += "</table>";
+
+           let display = document.getElementById('symbtable');
+           display. innerHTML = result;
+
+        }
 
     </script>
 </body>
