--- a/index.html
+++ b/index.html
@@ -212,8 +212,10 @@
 
                 let gen = new _CodeGen();
                 let res = gen.generate(results);
+                let resString = res.toString();
+                let final = resString.split(',').join(' ');
 
-               putMessage(res.toString());
+               putMessage(final);
             }
 
 	    }
